More aligning, fixed bottom padding.

--- a/www/core/styling/css/main.css
+++ b/www/core/styling/css/main.css
@@ -109,7 +109,7 @@ a {
 }
 #content-container{
 	margin:0;
-	padding:5.2em 0 0 0;
+	padding:5.3em 0 20px 0;
     -webkit-overflow-scrolling: touch;
 }
 .content-header {
